dalle picture generation and email tempalte

--- a/assets/email_base.html
+++ b/assets/email_base.html
@@ -5,46 +5,59 @@
        /* Add custom classes and styles that you want inlined here */
     </style>
   </head>
-  <body class="bg-light">
-    <h1 class="h1 px-1"> Mesi- Your Weekly Meal Inspiration </h1>
+<body>
+  <div class="bg-black">
     <div class="container">
-
-      <!--- begin card --->
-      <div class="card my-10">
-        <div class="card-body bg-red-100">
-          <h1 class="h3 mb-2">Recipe One</h1>
-          <h5 class="h4 mb-Z">Ingredients</h5>
-          <hr>
-          <div class="space-y-3">
-            <p class="text-gray-700">
-              We hope you enjoy using Bootstrap Email. This is our Online Editor that allows you to edit emails
-              and have them render directly in the browser. The outputted HTML will be in the "HTML" tab in the top
-            </p>
-           	 <a class="btn btn-red-500" href="https://app.bootstrapemail.com/templates" target="_blank">View The Full Recipe</a>
-          </hr>
-        </div>
-        </div>
-      </div>
-      <!--- end card --->
-      <!--- begin card --->
-      <div class="card my-10">
-        <div class="card-body bg-red-100">
-          <h1 class="h3 mb-2">Recipe Two</h1>
-          <h5 class="h4 mb-Z">Ingredients</h5>
-          <hr>
-          <div class="space-y-3">
-            <p class="text-gray-700">
-              We hope you enjoy using Bootstrap Email. This is our Online Editor that allows you to edit emails
-              and have them render directly in the browser. The outputted HTML will be in the "HTML" tab in the top
-              and that is the HTML you want to use to send emails. All the styles and responsive CSS are self contained in the
-              HTML that is generated making is very portable needing no external CSS files.
-            </p>
-           	 <a class="btn btn-red-500" href="https://app.bootstrapemail.com/templates" target="_blank">View The Full Recipe</a>
-          </div>
-          <hr>
-        </div>
-      </div>
-      <!--- end card --->
+      <h1 class="ax-center text-white text-center mb-10">Weekly Mize<br>Meal Inspiration</h1>
+      <img class="ax-center max-w-56 mb-10 rounded-lg" src="https://images.squarespace-cdn.com/content/v1/57879a6cbebafb879f256735/1579721909133-R2KSZ8VGDGBI90DYATBK/header4.jpg">
+      <p class="ax-center max-w-96 lh-lg text-white text-center text-2xl mb-10">Get excited by the fresh flavors and cuisines of this week's meals! Completely personolized to you and the best deals at your local store.</p>
+      <a class="btn btn-yellow-300 rounded-full fw-800 text-5xl py-4 ax-center mb-10 w-full w-lg-80" href="https://sites.google.com/view/mize-food/home">Visit Us</a>
     </div>
-  </body>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <a href="{link1}">
+          <img class="max-w-48 ax-center" src="{pic1}" />
+          <h5 class="ax-center text-black text-center mb-10">{meal1}</h5>
+        </a>
+      </div>
+      <div class="col-6">
+        <a href="{link2}">
+          <img class="max-w-48 ax-center" src="{pic2}" />
+          <h5 class="ax-center text-black text-center mb-10">{meal2}</h5>
+        </a>
+      </div>
+    <div class="row">
+      <div class="col-6">
+        <a href="{link3}">
+          <img class="max-w-48 ax-center" src="{pic3}" />
+          <h5 class="ax-center text-black text-center mb-10">{meal3}</h5>
+        </a>
+      </div>
+      <div class="col-6">
+        <a href="{link4}">
+          <img class="max-w-48 ax-center" src="{pic4}" />
+          <h5 class="ax-center text-black text-center mb-10">{meal4}</h5>
+        </a>
+      </div>
+    <div class="row">
+      <div class="col-6">
+        <a href="{link5}">
+          <img class="max-w-48 ax-center" src="{pic5}" />
+          <h5 class="ax-center text-black text-center mb-10">{meal5}</h5>
+        </a>
+      </div>
+      <div class="col-6">
+        <a href="{link6}">
+          <img class="max-w-48 ax-center" src="{pic6}" />
+          <h5 class="ax-center text-black text-center mb-10">{meal6}</h5>
+        </a>
+      </div>
+    </div>
+    <div class="text-muted text-center my-6">
+	happy cooking- Mize <br>
+    </div>
+  </div>
+</body>
 </html>
