--- a/assets/email_base.html
+++ b/assets/email_base.html
@@ -1,17 +1,12 @@
-<html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <style>
-       /* Add custom classes and styles that you want inlined here */
-    </style>
-  </head>
 <body>
   <div class="bg-black">
     <div class="container">
-      <h1 class="ax-center text-white text-center mb-10">Weekly Mize<br>Meal Inspiration</h1>
+	<h1 class="ax-center text-white text-center mb-10">Mize Meals</h1>
+            <h2 class="ax-center text-white text-center mb-10">Your Meals<br>This Week</h2>
       <img class="ax-center max-w-56 mb-10 rounded-lg" src="https://images.squarespace-cdn.com/content/v1/57879a6cbebafb879f256735/1579721909133-R2KSZ8VGDGBI90DYATBK/header4.jpg">
-      <p class="ax-center max-w-96 lh-lg text-white text-center text-2xl mb-10">Get excited by the fresh flavors and cuisines of this week's meals! Completely personolized to you and the best deals at your local store.</p>
-      <a class="btn btn-yellow-300 rounded-full fw-800 text-5xl py-4 ax-center mb-10 w-full w-lg-80" href="https://sites.google.com/view/mize-food/home">Visit Us</a>
+      <p class="ax-center max-w-96 lh-lg text-white text-center text-2xl mb-10">Get inspired by the fresh flavors and cuisines of this week's meals! Completely personolized to you and the best deals at your local store.</p>
+                <a class="btn btn-yellow-300 rounded-full fw-800 text-5xl py-4 ax-center mb-10 w-full w-lg-80" href="https://sites.google.com/view/mize-food/home">Visit Us</a>
+
     </div>
   </div>
   <div class="container">
@@ -60,4 +55,3 @@
     </div>
   </div>
 </body>
-</html>
